--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # ignore temp vim files
 **.swp
+**.swo
 
 # macOS folder files
 **.DS_STORE
@@ -29,3 +30,4 @@ hs_err_pid*
 .idea/workspace.xml
 .idea/**tasks.xml
 out/
+.idea/artifacts/
